@@ -35,6 +35,26 @@ from MDAnalysisTests.coordinates.reference import RefTRZ
 from MDAnalysisTests.datafiles import (TRZ_psf, TRZ, two_water_gro)
 
 
+def test_deprecated_trz_reader():
+    wmsg = "The TRZ reader is deprecated"
+
+    with pytest.warns(DeprecationWarning, match=wmsg):
+        _ = mda.Universe(TRZ_psf, TRZ)
+
+
+def test_deprecated_trz_writer(tmpdir):
+    u = mda.Universe(two_water_gro)
+
+    wmsg = "The TRZ writer is deprecated"
+
+    with pytest.warns(DeprecationWarning, match=wmsg):
+        with tmpdir.as_cwd():
+            with mda.coordinates.TRZ.TRZWriter('test.trz', len(u.atoms)) as W:
+                W.write(u)
+
+
+@pytest.mark.filterwarnings("ignore:The TRZ reader is deprecated")
+@pytest.mark.filterwarnings("ignore:The TRZ writer is deprecated")
 class TestTRZReader(RefTRZ):
     prec = 3
 
@@ -147,6 +167,7 @@ class TestTRZReader(RefTRZ):
         assert u2.dimensions is None
 
 
+@pytest.mark.filterwarnings("ignore:The TRZ writer is deprecated")
 class TestTRZWriter(RefTRZ):
     prec = 3
     writer = mda.coordinates.TRZ.TRZWriter
@@ -211,6 +232,7 @@ class TestTRZWriter(RefTRZ):
                 w.write(u.atoms)
 
 
+@pytest.mark.filterwarnings("ignore:The TRZ writer is deprecated")
 class TestTRZWriter2(object):
     @pytest.fixture()
     def u(self):
@@ -239,6 +261,7 @@ class TestTRZWriter2(object):
             assert_allclose(u2.trajectory.dt, 1.0)
 
 
+@pytest.mark.filterwarnings("ignore:The TRZ writer is deprecated")
 class TestWrite_Partial_Timestep(object):
     """Test writing a partial timestep made by passing only an atomgroup to
     Writer. (Issue 163)
